refresh urls with filters done,sliders always match boxes,overflow fixed

--- a/src/scss/search.scss
+++ b/src/scss/search.scss
@@ -1685,7 +1685,7 @@ input[type='number']::-webkit-outer-spin-button {
     align-items: center;
 
     width: 100%;
-    height: calc(100% - 2px);
+    height: calc(100% - 7px);
 
     padding: 5px;
     padding-left: 10px;
@@ -2031,7 +2031,7 @@ input[type='number']::-webkit-outer-spin-button {
     align-items: center;
 
     width: 100%;
-    height: calc(100% - 2px);
+    height: calc(100% - 7px);
 
     padding: 5px;
     padding-left: 10px;
